[package]
name = "fireblocks-sdk"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Fireblocks rust SDK"
readme = "README.md"
repository = "https://github.com/holaplex/firblocks-rust-sdk"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]


[dependencies]
sha2 = "~0.10"
hex = "~0.4.0"
serde = { version = "1.0.91", features = ["derive"] }
jsonwebtoken = "8.2.0"
reqwest = { version = "0.11.14", features = ["json"] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
