[package]
name = "fireblocks-sdk"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Fireblocks rust SDK"
readme = "README.md"
repository = "https://github.com/holaplex/firblocks-rust-sdk"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]


[dependencies]
sha2 = "~0.10"
hex = "~0.4.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.91"
serde_with = { version = "2.2.0", features = ["base64", "hex"] }
jsonwebtoken = "8.2.0"
reqwest = { version = "0.11.14", features = ["json"] }
anyhow = "1.0.66"
chrono = "0.4.23"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "parking_lot"] }
clap = { version = "4.2.7", features = ["env", "derive", "cargo"] }
tracing = "0.1.37"
